syntax = "proto3";

package scalehandler;

option go_package = "scale-handler/pkg/api/proto/scale-handler";

message TimeRange {
  string from = 1;
  string to = 2;
  int32 replicas = 3;
}

message Schedule {
  message DaySchedule {
    repeated TimeRange time_ranges = 1;
  }
  
  map<string, DaySchedule> weekdays = 1;
  map<string, DaySchedule> dates = 2;
  repeated string exceptions = 3;
}

message Application {
  repeated Container containers = 1;
}

message Container {
  string name = 1;
  string image = 2;
  repeated ContainerPort ports = 3;
  repeated EnvVar env = 4;
  Resources resources = 5;
  Probe liveness_probe = 6;
  Probe readiness_probe = 7;
}

message ContainerPort {
  int32 container_port = 1;
  string protocol = 2; // TCP, UDP
}

message EnvVar {
  string name = 1;
  string value = 2;
}

message Resources {
  ResourceQuantity requests = 1;
  ResourceQuantity limits = 2;
}

message ResourceQuantity {
  string memory = 1;
  string cpu = 2;
}

message Probe {
  HttpGetAction http_get = 1;
  int32 initial_delay_seconds = 2;
  int32 period_seconds = 3;
}

message HttpGetAction {
  string path = 1;
  int32 port = 2;
}
